# Python-and-Statistics

./: .coverage  .gitignore  .gitmodules  1 Central Tendency.py  LoRContents.md  LoRecommendation.md  Python-and-Statistics.code-workspace  UArizona Skill Test.md  alg-statistics-03-probability.md  alg-statistics-04-Discrete-Random.md  alg-statistics-3-probability.md  alg-statistics-4-Discrete-Random.md  cheat-sheet.md  crash-course-03-central-tendency.md  crash-course-04-measures-of-spread.md  crash-course-04-measures-of-spread.py  crash-course-05, 06-data-visualization.md  crash-course-13-probability.md  crash-course-14-binomial-distribution.md  crash-course-15-geometric-distribution  crash-course-15-geometric-distribution.md  crash-course-4-measures-of-spread.py  crash-course-5-data-visualization.md  crash-course-7-distributions.md  crash-course-8-correlation  crash-course-8-correlation.md  geek-for-geeks-Central-Tendency.py  neutralnine-Math-and_Statistics.py  nn-math-and-statistics.py  personal-notes.md  pyproject.toml  stats
.github/agents/: py-documentor.agent.md  py-instructor.agent.md  py-unittester.agent.md
CrashCourse/: 1-intro-statistics.py
Knolwedge Checks/: 4-01 Probability Mass Function.md
Knowledge Checks/: 4-02 Discrete-Random.md
geekforgeeks/: 2-graphs-in-python.md
src/: scratch.py
