[project]
name = "python-and-statistics"
version = "0.1.0"
description = ""
authors = [
    {name = "Jay",email = "77408854+jauntyjocularjay@users.noreply.github.com"}
]
license = "MIT"
requires-python = ">=3.14"
dependencies = [
    "pygments (>=2.20.0,<3.0.0)",
    "pytest (>=9.0.3,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
